@@ -1,7 +1,7 @@
 Package: spider
 Type: Package
 Title: Species Identity and Evolution in R
-Version: 1.1-3
+Version: 1.1-4
 Date: 2012-03-29
 Author: Samuel Brown, Rupert Collins, Stephane Boyer, Marie-Caroline Lefort, Jagoba Malumbres-Olarte, Cor Vink, Rob Cruickshank
 Maintainer: Samuel Brown <s_d_j_brown@hotmail.com>
