@@ -1,8 +1,8 @@
 Package: spiderDev
 Type: Package
 Title: Species Identity and Evolution in R--development
-Version: 0.0-6
-Date: 2012-05-06
+Version: 0.0-7
+Date: 2012-06-17
 Author: Samuel Brown, Rupert Collins, Stephane Boyer, Marie-Caroline Lefort, Jagoba Malumbres-Olarte, Cor Vink, Rob Cruickshank
 Maintainer: Samuel Brown <s_d_j_brown@hotmail.com>
 Description: A package for the analysis of species limits and DNA barcoding data. Development area for functions that will eventually be included in spider proper.
