@@ -112,7 +112,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
 		  <p class="Sidebar_Body"><br /></p>
 	 <p class="Sidebar_Body">- <span class="style_3">Spider</span> is now published in <em>Molecular Ecology Resources</em>.  <a class="class5" title="http://dx.doi.org/10.1111/j.1755-0998.2011.03108.x" href="http://dx.doi.org/10.1111/j.1755-0998.2011.03108.x">URL</a>.<br /></p>
                   <p class="Sidebar_Body"><br /></p>
-                  <p class="Sidebar_Body">- <span class="style_3">Spider</span> version 1.1-2 is now available from CRAN<br /></p>
+                  <p class="Sidebar_Body">- <span class="style_3">Spider</span> version 1.1-4 is now available from CRAN<br /></p>
                   <p class="Sidebar_Body"><br /></p>
                   <p class="Sidebar_Body">- Spider was presented at the <span class="style_4">4th International Barcode Of Life Conference in Adelaide (Nov. 2011)<br /></span></p>
                   <p class="Sidebar_Body"> <br /></p>
@@ -134,7 +134,11 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
 		                    <p class="Sidebar_Body"> <br /></p>
                   <p class="Sidebar_Body">2. Collins et al. (2012) Barcoding's next top model: an evaluation of nucleotide substitution models for specimen identification. <em>Methods in Ecology and Evolution</em>. <a class="class5" title="http://dx.doi.org/10.1111/j.2041-210X.2011.00176.x" href="http://dx.doi.org/10.1111/j.2041-210X.2011.00176.x">URL</a>.<br /></p>
 		                    <p class="Sidebar_Body"> <br /></p>
-	<p class="Sidebar_Body">3. Collins et al. (2012) Barcoding and border biosecurity: identifying cyprinid fishes in the aquarium trade. <em>PLoS ONE</em> 7(1): <a class="class5" title="http://dx.doi.org/10.1371/journal.pone.0028381" href="http://dx.doi.org/10.1371/journal.pone.0028381">e28381</a>.<br /></p>
+	   	  <p class="Sidebar_Body">3. Collins et al. (2012) Barcoding and border biosecurity: identifying cyprinid fishes in the aquarium trade. <em>PLoS ONE</em>. <a class="class5" title="http://dx.doi.org/10.1371/journal.pone.0028381" href="http://dx.doi.org/10.1371/journal.pone.0028381">URL</a>.<br /></p>
+	                    <p class="Sidebar_Body"> <br /></p>
+		  <p class="Sidebar_Body">4. Boyer et al. (2012) Sliding window analyses for optimal selection of mini-barcodes, and application to 454-pyrosequencing for specimen identification from degraded DNA. <em>PLoS One</em>. <a class="class5" title="http://dx.doi.org/10.1371/journal.pone.0038215" href="http://dx.doi.org/10.1371/journal.pone.0038215">URL</a>.<br /></p>
+		  	                    <p class="Sidebar_Body"> <br /></p>
+		  <p class="Sidebar_Body">5. Brown et al. (2012) Molecular phylogenetics of a South Pacific sap beetle species complex (<em>Carpophilus</em> spp., Coleoptera: Nitidulidae). <em>Molecular Phylogenetics and Evolution</em>. <a class="class5" title="http://dx.doi.org/10.1016/j.ympev.2012.04.018" href="http://dx.doi.org/10.1016/j.ympev.2012.04.018">URL</a>.<br /></p>
                   <p class="Sidebar_Body"><br /></p>
                   <p class="Sidebar_Body"><br /></p>
                   <p class="paragraph_style_3">LINKS<br /></p>
