@@ -1,4 +1,11 @@
 ############################################
+                                SPIDER VERSION 1.1-4
+				Released 17 June 2012
+				
+
+-- sarkar: The addition of a dataset contatining the dummy sequences published in Sarkar et al to illustrate the different categories of diagnostic nucleotides.
+
+############################################
                                 SPIDER VERSION 1.1-3
 				Released 29 March 2012
 				
